# spade

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  README.md  pyproject.toml
.github/workflows/: push.yml
docs/source/: conf.py  index.md
spade/: __init__.py  __main__.py  cli.py  dig.py
spade/commands/: dig.py  traceroute.py
spade/error/: dig.py  traceroute.py
spade/templates/dig/: zone_file.txt
tests/: test_cli.py  test_dig.py
